--- a/_talks/ASA2023.md
+++ b/_talks/ASA2023.md
@@ -2,7 +2,7 @@
 title: "A Framework to Estimate Critical Nitrogen Dilution Curves"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
+permalink: /talks/ASA2023
 venue: "ASA, CSSA, SSSA International Annual Meeting"
 date: 2022-11-09
 location: "Baltimore, MD"
