--- a/_talks/ASA2023.md
+++ b/_talks/ASA2023.md
@@ -3,9 +3,10 @@ title: "A Framework to Estimate Critical Nitrogen Dilution Curves"
 collection: talks
 type: "Talk"
 permalink: /talks/ASA2023
-venue: "ASA, CSSA, SSSA International Annual Meeting"
+venue: "2022 ASA, CSSA, SSSA INTERNATIONAL ANNUAL MEETING"
 date: 2022-11-09
 location: "Baltimore, MD"
 ---
 
 ASA Section: Biometry and Statistical Computing
+(See video)[https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142444]
