--- a/_talks/ASA2022.md
+++ b/_talks/ASA2022.md
@@ -9,4 +9,4 @@ location: "Salt Lake City, Utah"
 ---
 
 Biometry and Statistical Computing Oral  
-(See video)[https://scisoc.confex.com/scisoc/2021am/meetingapp.cgi/Paper/135638]
+[See video](https://scisoc.confex.com/scisoc/2021am/meetingapp.cgi/Paper/135638)
