--- a/_talks/ASA2023.md
+++ b/_talks/ASA2023.md
@@ -9,4 +9,4 @@ location: "Baltimore, MD"
 ---
 
 ASA Section: Biometry and Statistical Computing
-(See video)[https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142444]
+[See video](https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142444)
